log
Wed 12 Apr 2023 10:32:10 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
c4db1d0
Wed 12 Apr 2023 10:37:21 PM UTC: 
 hashmap.c | 18 ++++++++++--------
 1 file changed, 10 insertions(+), 8 deletions(-)
 tests:  0|6
total_score: 0/70
81b3854
Wed 12 Apr 2023 10:38:59 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
03c60cc
Wed 12 Apr 2023 10:39:57 PM UTC: 
 hashmap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
237372b
Wed 12 Apr 2023 10:40:53 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
f3a586d
Wed 12 Apr 2023 10:41:32 PM UTC: 
 hashmap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  1|5
total_score: 10/70
9fcee3f
Wed 12 Apr 2023 10:41:56 PM UTC: 
 hashmap.c | 4 ----
 1 file changed, 4 deletions(-)
 tests:  1|5
total_score: 10/70
3866e9c
Wed 12 Apr 2023 10:49:26 PM UTC: 
 hashmap.c | 24 ++++++++++++++++++++++++
 1 file changed, 24 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:56:16: error: too few arguments to function ‘hash’
   56 |   long index = hash(key) % map->capacity;
      |                ^~~~
hashmap.c:26:6: note: declared here
   26 | long hash( char * key, long capacity) {
      |      ^~~~
hashmap.c:65:32: error: expected ‘;’ before ‘newPair’
   65 |       strcpy(nuevoPar->key,key)
      |                                ^
      |                                ;
   66 |       newPair->value = value;
      |       ~~~~~~~                   
hashmap.c:67:29: error: ‘newPair’ undeclared (first use in this function); did you mean ‘Pair’?
   67 |       map->buckets[index] = newPair;
      |                             ^~~~~~~
      |                             Pair
hashmap.c:67:29: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:74:38: error: expected ‘;’ before ‘if’
   74 |     index = (index+1) % map->capacity
      |                                      ^
      |                                      ;
   75 | 
   76 |     if(index == primerIndex){
      |     ~~                                
hashmap.c:57:8: error: unused variable ‘primerIndex’ [-Werror=unused-variable]
   57 |   long primerIndex = index;
      |        ^~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
ff1dc35
Wed 12 Apr 2023 10:49:48 PM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:56:16: error: too few arguments to function ‘hash’
   56 |   long index = hash(key) % map->capacity;
      |                ^~~~
hashmap.c:26:6: note: declared here
   26 | long hash( char * key, long capacity) {
      |      ^~~~
hashmap.c:65:32: error: expected ‘;’ before ‘nuevoPar’
   65 |       strcpy(nuevoPar->key,key)
      |                                ^
      |                                ;
   66 |       nuevoPar->value = value;
      |       ~~~~~~~~                  
hashmap.c:74:38: error: expected ‘;’ before ‘if’
   74 |     index = (index+1) % map->capacity
      |                                      ^
      |                                      ;
   75 | 
   76 |     if(index == primerIndex){
      |     ~~                                
hashmap.c:57:8: error: unused variable ‘primerIndex’ [-Werror=unused-variable]
   57 |   long primerIndex = index;
      |        ^~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
4d737ee
Wed 12 Apr 2023 10:50:05 PM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:74:38: error: expected ‘;’ before ‘if’
   74 |     index = (index+1) % map->capacity
      |                                      ^
      |                                      ;
   75 | 
   76 |     if(index == primerIndex){
      |     ~~                                
hashmap.c:57:8: error: unused variable ‘primerIndex’ [-Werror=unused-variable]
   57 |   long primerIndex = index;
      |        ^~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
5dbcd07
Wed 12 Apr 2023 10:50:20 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
d2111e6
Wed 12 Apr 2023 10:51:13 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
38e8312
Wed 12 Apr 2023 10:53:18 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
f964c86
Wed 12 Apr 2023 10:58:17 PM UTC: 
 hashmap.c | 28 ++++++++++++++++++++--------
 1 file changed, 20 insertions(+), 8 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘eraseMap’:
hashmap.c:89:32: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   89 |     if(current == NULL) return NULL;
      |                                ^~~~
hashmap.c:82:6: note: declared here
   82 | void eraseMap(HashMap * map,  char * key) {
      |      ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
28db2d5
Wed 12 Apr 2023 10:58:26 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
77008e2
Wed 12 Apr 2023 10:59:14 PM UTC: 
 hashmap.c | 12 ++++++------
 1 file changed, 6 insertions(+), 6 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:83:25: error: ‘return’ with no value, in function returning non-void [-Werror=return-type]
   83 |     if(current == NULL) return;
      |                         ^~~~~~
hashmap.c:76:8: note: declared here
   76 | Pair * searchMap(HashMap * map,  char * key) {
      |        ^~~~~~~~~
hashmap.c:87:7: error: ‘return’ with no value, in function returning non-void [-Werror=return-type]
   87 |       return;
      |       ^~~~~~
hashmap.c:76:8: note: declared here
   76 | Pair * searchMap(HashMap * map,  char * key) {
      |        ^~~~~~~~~
hashmap.c:92:30: error: ‘return’ with no value, in function returning non-void [-Werror=return-type]
   92 |     if(index == primerIndex) return;
      |                              ^~~~~~
hashmap.c:76:8: note: declared here
   76 | Pair * searchMap(HashMap * map,  char * key) {
      |        ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
fa8bcc9
Wed 12 Apr 2023 10:59:32 PM UTC: 
 hashmap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  8|3
total_score: 40/70
1b5fc20
Wed 12 Apr 2023 11:01:39 PM UTC: 
 hashmap.c | 18 ++++++++++++++++++
 1 file changed, 18 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘eraseMap’:
hashmap.c:105:32: error: ‘return’ with a value, in function returning void [-Werror=return-type]
  105 |     if(current == NULL) return NULL;
      |                                ^~~~
hashmap.c:98:6: note: declared here
   98 | void eraseMap(HashMap * map,  char * key) {
      |      ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
7fb6446
Wed 12 Apr 2023 11:01:48 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|3
total_score: 40/70
7e8f213
